--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
     </section>
 
     <!-- "reach out" section -->
-    <section>
-        <h2>Reach Out</h2>
+    <section id="reach-out" class="contact">
+        <h2 class="section-title secondary-border">Reach Out</h2>
         <div class="contact-info">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2887.5415179687852!2d-79.47111188451207!3d43.63690066150267!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b35d86a5f5849%3A0xef972d3bbe229d81!2s15%20Windermere%20Ave%2C%20Toronto%2C%20ON%20M6S%205A2!5e0!3m2!1sen!2sca!4v1623873949026!5m2!1sen!2sca" 
             width="400"
